[package]
name = "hitt"
version = "0.1.0"
edition = "2021"
description = "A fast, beautiful TUI alternative to Postman"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "cookies", "multipart", "rustls-tls", "stream"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# SSE
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# JSON Path (for chaining & assertions)
jsonpath-rust = "0.7"

# JSON Schema (for validation)
jsonschema = "0.26"

# Syntax highlighting
syntect = "5"

# Storage
sled = "0.34"

# Diff
similar = { version = "2", features = ["inline"] }

# OpenAPI
openapiv3 = "2"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
url = "2"
base64 = "0.22"
arboard = "3"
dirs = "5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
fuzzy-matcher = "0.3"
shell-words = "1"
rand = "0.8"
http = "1"
futures-util = "0.3"
tokio-stream = "0.1"
bytes = "1"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Noisy or not applicable in this phase
similar_names = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
doc_markdown = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
